# pkarr-churn

./: .gitignore  Cargo.toml  README.md  analyze.py  analyze_multiple_nodes_storing.py  analyze_nodes_storing.py  nodes_decay.csv  plot.py  requirements.txt  results-node_decay.md
data/: run_128_1.csv  run_256_1.csv  run_512.csv  run_512_2.csv  run_512_late.csv
src/: helpers.rs  main.rs  main_check_churn.rs  main_check_churn_parallel.rs  main_check_churn_simple.rs  main_publish_and_save.rs  nodes_decay.rs  publish.rs  publish_speedtest.rs  published_key.rs  resolve.rs
