[package]
name = "pkarr_churn_experiment"
version = "0.1.0"
edition = "2021"
authors = ["SHAcollision"]
description = "An experiment to measure the distribution of churn times of Pkarr records from Mainline DHT."
license = "MIT"
readme = "README.md"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
pkarr = "3.5.2"
anyhow = "1"
mainline = "5.3.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
ctrlc = "3.4.5"
hex = "0.4.3"


[[bin]]
name = "main_publish_and_save"
path = "src/main_publish_and_save.rs"

[[bin]]
name = "main_check_churn"
path = "src/main_check_churn.rs"