[package]
name = "pkarr_churn_experiment"
version = "0.1.0"
edition = "2021"
authors = ["SHAcollision"]
description = "An experiment to measure the distribution of churn times of Pkarr records from Mainline DHT."
license = "MIT"
readme = "README.md"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
pkarr = "3.5.1"
anyhow = "1"
getrandom = "0.3.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[[bin]]
name = "publish"
path = "src/publish.rs"

[[bin]]
name = "publish_speedtest"
path = "src/publish_speedtest.rs"

[[bin]]
name = "resolve"
path = "src/resolve.rs"
